--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "tailwindcss": "^3.4.12"
+
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
